# SpaceX

./: README.md
neural_network-project/: pyproject.toml
neural_network-project/neural_network/: evaluate_model.py  graphs.py  load_data.py  models.py  training_loop.py  validation_loop.py
neural_network-project/spaceX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: simple_neural_network.pt  simple_neuralnetwork.ipynb
